# mlpox

./: LICENSE  README.md  mlp.py  project.toml  pyproject.toml
src/mlpox/: __init__.py  layers.py  load_models.py  networks.py  utils.py
tests/: test_layers.py  test_load_models.py  test_networks.py  test_utils.py
